# law-crawler-ui

./: .dockerignore  .gitignore  CLAUDE.md  LAW_SITE_DESC.yaml  README.md  env.sample  homepage-contact-count.service  homepage-contact-count.sh  homepage-contact-count.timer  law-crawler-ui.service  make_exe_ui20.bat  make_exe_ui20.sh  pyproject.toml  pytest.ini  run_ui.bat  run_ui.sh  web-deploy.sh  web-service.sh
.claude/: .mcp.json  settings.local.json
.claude/agents/: python-pytest-generator.md
app/: __init__.py
app/backend/: main.py
app/backend/api/endpoints/: home_routes.py
app/backend/api/v1/: attachments.py  dashboard.py  logs.py  search.py  (+2 more)
app/backend/core/: config.py  exception_handler.py  exceptions.py  kiwi7_db.py  logger.py  template_engine.py
app/backend/data/: __init__.py  db_util.py  log_util.py
app/backend/page_contexts/: __init__.py  context_registry.py  dashboard_context.py  logs_context.py  search_context.py  settings_context.py  statistics_context.py
app/data/: history.json  history.md  info.md
app/frontend/views/: main.html
docs/: prompt.md  report_law_crawler_ui.md  table_ddl.md  기능(Ver1.0).md
examples/: card1.html  table1.html  table2.html
tests/: README.md  api_list.txt  api_test_result.txt  conftest.py  pytest.ini  test_api.py  test_api.sh  test_dashboard_context.py  test_logs_context.py  test_search_context.py  test_settings_context.py  test_statistics_context.py
ui/: app.py  run_ui.bat
ui/data/: history.md  info.md
ui/utils/: db_manager.py  db_util.py  logger.py  misc_utils.py  sys_util.py  ui_settings.py
(+16 files in other folders)
