[project]
name = "law-crawler-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "concurrent-log-handler>=0.9.28",
    "debugpy>=1.8.17",
    "fastapi>=0.119.1",
    "jinja2>=3.1.6",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "streamlit>=1.45.1",
    "streamlit-aggrid>=1.1.5.post1",
    "uvicorn>=0.38.0",
]
